fix: center headers on small screen

--- a/src/components/choose-us/chooseUs.css
+++ b/src/components/choose-us/chooseUs.css
@@ -49,11 +49,9 @@
 
 .chooseUs-grid-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(0,1fr));
   gap: 2rem;
   margin-top: 1rem;
-  max-width: 65%;
-  min-width: 30rem;
 }
 
 .chooseUs-btn {
